--- a/builds/build_ver-Tue_Mar_21_2017_18_54_57/index.html
+++ b/builds/build_ver-Tue_Mar_21_2017_18_54_57/index.html
@@ -109,7 +109,7 @@
                         </li>
                         <li class="navigation__list_item"><a href="#" title="tab2">Информация</a>
                         </li>
-                        <li class="navigation__list_item"><a href="#" title="tab3">Привелегии</a>
+                        <li class="navigation__list_item"><a href="#" title="tab3">Привилегии</a>
                         </li>
                     </ul>
                 </nav>
